// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoBubble is visible 1`] = `
<DocumentFragment>
  <div
    class="info-bubble info-bubble-type-segment visible"
  >
    <div
      class="info-bubble-triangle"
    />
    <header>
      <div
        class="info-bubble-label info-bubble-label-editable"
      >
        Streetcar
        <span
          class="info-bubble-label-editable-icon"
        >
          <svg
            class="svg-inline--fa fa-lock"
          />
        </span>
      </div>
      <button
        class="info-bubble-remove"
        tabindex="-1"
        title="Remove segment"
      >
        <svg
          class="svg-inline--fa remove-icon fa-trash-alt"
        />
        Remove
      </button>
    </header>
    <div
      class="info-bubble-controls"
    >
      <div
        class="variants"
      >
        <button
          class="variant-selected"
          disabled=""
          title="Inbound"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-direction-inbound"
            />
          </svg>
        </button>
        <button
          title="Outbound"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-direction-outbound"
            />
          </svg>
        </button>
        <hr />
        <button
          class="variant-selected"
          disabled=""
          title="Asphalt"
        >
          <svg
            class="icon"
            style="fill: #292a29;"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-asphalt"
            />
          </svg>
        </button>
        <button
          title="Red lane"
        >
          <svg
            class="icon"
            style="fill: #9b1f22;"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-asphalt"
            />
          </svg>
        </button>
        <button
          title="Grass"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-grass"
            />
          </svg>
        </button>
      </div>
      <div
        class="non-variant"
      >
        <div
          class="up-down-input"
        >
          <button
            class="up-down-input-decrement"
            tabindex="-1"
            title="Decrease width (hold Shift for more precision)"
          >
            <svg
              class="svg-inline--fa fa-minus"
            />
          </button>
          <input
            class="up-down-input-element"
            title="Change width of the segment"
            type="text"
            value="60 m"
          />
          <button
            class="up-down-input-increment"
            tabindex="-1"
            title="Increase width (hold Shift for more precision)"
          >
            <svg
              class="svg-inline--fa fa-plus"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InfoBubble renders 1`] = `
<DocumentFragment>
  <div
    class="info-bubble info-bubble-type-segment"
  >
    <div
      class="info-bubble-triangle"
    />
    <header>
      <div
        class="info-bubble-label info-bubble-label-editable"
      >
        Streetcar
        <span
          class="info-bubble-label-editable-icon"
        >
          <svg
            class="svg-inline--fa fa-lock"
          />
        </span>
      </div>
      <button
        class="info-bubble-remove"
        tabindex="-1"
        title="Remove segment"
      >
        <svg
          class="svg-inline--fa remove-icon fa-trash-alt"
        />
        Remove
      </button>
    </header>
    <div
      class="info-bubble-controls"
    >
      <div
        class="variants"
      >
        <button
          class="variant-selected"
          disabled=""
          title="Inbound"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-direction-inbound"
            />
          </svg>
        </button>
        <button
          title="Outbound"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-direction-outbound"
            />
          </svg>
        </button>
        <hr />
        <button
          class="variant-selected"
          disabled=""
          title="Asphalt"
        >
          <svg
            class="icon"
            style="fill: #292a29;"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-asphalt"
            />
          </svg>
        </button>
        <button
          title="Red lane"
        >
          <svg
            class="icon"
            style="fill: #9b1f22;"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-asphalt"
            />
          </svg>
        </button>
        <button
          title="Grass"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-grass"
            />
          </svg>
        </button>
      </div>
      <div
        class="non-variant"
      >
        <div
          class="up-down-input"
        >
          <button
            class="up-down-input-decrement"
            tabindex="-1"
            title="Decrease width (hold Shift for more precision)"
          >
            <svg
              class="svg-inline--fa fa-minus"
            />
          </button>
          <input
            class="up-down-input-element"
            title="Change width of the segment"
            type="text"
            value="60 m"
          />
          <button
            class="up-down-input-increment"
            tabindex="-1"
            title="Increase width (hold Shift for more precision)"
          >
            <svg
              class="svg-inline--fa fa-plus"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InfoBubble shows building left info bubble 1`] = `
<DocumentFragment>
  <div
    class="info-bubble info-bubble-type-building"
  >
    <div
      class="info-bubble-triangle"
    />
    <header>
      <div
        class="info-bubble-label"
      >
        Grass
      </div>
    </header>
    <div
      class="info-bubble-controls"
    >
      <div
        class="variants"
      >
        <button
          title="Waterfront"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-waterfront"
            />
          </svg>
        </button>
        <button
          class="variant-selected"
          disabled=""
          title="Grass"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-grass"
            />
          </svg>
        </button>
        <button
          title="Empty lot"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-fence"
            />
          </svg>
        </button>
        <button
          title="Parking lot"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-car"
            />
          </svg>
        </button>
        <button
          title="Home"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-residential"
            />
          </svg>
        </button>
        <button
          title="Narrow building"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-building-thin"
            />
          </svg>
        </button>
        <button
          title="Wide building"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-building-wide"
            />
          </svg>
        </button>
        <button
          title="Arcade building"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-building-arcade"
            />
          </svg>
        </button>
      </div>
      <div
        class="non-variant building-height"
      >
        <div
          class="up-down-input"
        >
          <button
            class="up-down-input-decrement"
            disabled=""
            tabindex="-1"
            title="Remove floor"
          >
            <svg
              class="svg-inline--fa fa-minus"
            />
          </button>
          <input
            class="up-down-input-element"
            disabled=""
            title="Change the number of floors"
            type="text"
            value=""
          />
          <button
            class="up-down-input-increment"
            disabled=""
            tabindex="-1"
            title="Add floor"
          >
            <svg
              class="svg-inline--fa fa-plus"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InfoBubble shows building right info bubble 1`] = `
<DocumentFragment>
  <div
    class="info-bubble info-bubble-type-building"
  >
    <div
      class="info-bubble-triangle"
    />
    <header>
      <div
        class="info-bubble-label"
      >
        Grass
      </div>
    </header>
    <div
      class="info-bubble-controls"
    >
      <div
        class="variants"
      >
        <button
          title="Waterfront"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-waterfront"
            />
          </svg>
        </button>
        <button
          class="variant-selected"
          disabled=""
          title="Grass"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-grass"
            />
          </svg>
        </button>
        <button
          title="Empty lot"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-fence"
            />
          </svg>
        </button>
        <button
          title="Parking lot"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-car"
            />
          </svg>
        </button>
        <button
          title="Home"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-residential"
            />
          </svg>
        </button>
        <button
          title="Narrow building"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-building-thin"
            />
          </svg>
        </button>
        <button
          title="Wide building"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-building-wide"
            />
          </svg>
        </button>
        <button
          title="Arcade building"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-building-arcade"
            />
          </svg>
        </button>
      </div>
      <div
        class="non-variant building-height"
      >
        <div
          class="up-down-input"
        >
          <button
            class="up-down-input-decrement"
            disabled=""
            tabindex="-1"
            title="Remove floor"
          >
            <svg
              class="svg-inline--fa fa-minus"
            />
          </button>
          <input
            class="up-down-input-element"
            disabled=""
            title="Change the number of floors"
            type="text"
            value=""
          />
          <button
            class="up-down-input-increment"
            disabled=""
            tabindex="-1"
            title="Add floor"
          >
            <svg
              class="svg-inline--fa fa-plus"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InfoBubble shows description 1`] = `
<DocumentFragment>
  <div
    class="info-bubble info-bubble-type-segment show-description"
  >
    <div
      class="info-bubble-triangle"
    />
    <header>
      <div
        class="info-bubble-label info-bubble-label-editable"
      >
        Streetcar
        <span
          class="info-bubble-label-editable-icon"
        >
          <svg
            class="svg-inline--fa fa-lock"
          />
        </span>
      </div>
      <button
        class="info-bubble-remove"
        tabindex="-1"
        title="Remove segment"
      >
        <svg
          class="svg-inline--fa remove-icon fa-trash-alt"
        />
        Remove
      </button>
    </header>
    <div
      class="info-bubble-controls"
    >
      <div
        class="variants"
      >
        <button
          class="variant-selected"
          disabled=""
          title="Inbound"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-direction-inbound"
            />
          </svg>
        </button>
        <button
          title="Outbound"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-direction-outbound"
            />
          </svg>
        </button>
        <hr />
        <button
          class="variant-selected"
          disabled=""
          title="Asphalt"
        >
          <svg
            class="icon"
            style="fill: #292a29;"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-asphalt"
            />
          </svg>
        </button>
        <button
          title="Red lane"
        >
          <svg
            class="icon"
            style="fill: #9b1f22;"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-asphalt"
            />
          </svg>
        </button>
        <button
          title="Grass"
        >
          <svg
            class="icon"
            xmlns="http://www.w3.org/1999/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <use
              xlink:href="#icon-grass"
            />
          </svg>
        </button>
      </div>
      <div
        class="non-variant"
      >
        <div
          class="up-down-input"
        >
          <button
            class="up-down-input-decrement"
            tabindex="-1"
            title="Decrease width (hold Shift for more precision)"
          >
            <svg
              class="svg-inline--fa fa-minus"
            />
          </button>
          <input
            class="up-down-input-element"
            title="Change width of the segment"
            type="text"
            value="60 m"
          />
          <button
            class="up-down-input-increment"
            tabindex="-1"
            title="Increase width (hold Shift for more precision)"
          >
            <svg
              class="svg-inline--fa fa-plus"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
